    - Added the heavy lubricant recipe of solar cells to lubricant technology.
    - Fixed ezekiel ore leeching to actually give the correct amount of ore. This hurts you more then it hurts me, i assure you.
    - Fixed the catefory tabs not using up the amount of space they have.
    - Fixed molten metal capatalisation.

---------------------------------------------------------------------------------------------------
Version: 0.6.150
Date: 2025-01-25
  The they just HADDD to change scales Update:

  Fixes:
    - Fixed some icons being too small on belts.

---------------------------------------------------------------------------------------------------
Version: 0.6.149
Date: 2025-01-22
  The the road to good intentions is paved with bad ratios Update:

  Changes:
    - Changed all basic ores (iron, copper, nickel, zinc) to give 2-4 of their respective byproduct, and their chromic versions to give 0-4.
    - Changed manganese to give ferrum instead of iron ore - same idea, different item.

  Fixes:
    - Fixed the Francium Ultracool Centrifugal Kabbalism not being usable. This was done in a reasonable timeframe, trust.

---------------------------------------------------------------------------------------------------
Version: 0.6.148
Date: 2025-01-21
  The meant to be last patch, suck an egg Update:

  Fixes:
    - Fixed the cyclotron not being usable.
    - Fixed the fact that heat exchangers werent usable with tier 2 heat pipes.

---------------------------------------------------------------------------------------------------
Version: 0.6.147
Date: 2025-01-21
  The *expect your factories to break now, it was pissing me off that they didnt catalyst Update:

  Changes:
    - Changed all catalyst recipes to actually catalyse.
    - Changed ethylene glycol to take 1 palladium catalyst.

---------------------------------------------------------------------------------------------------
Version: 0.6.146
Date: 2025-01-18