@@ -125,6 +125,7 @@ Date: 2024-12-08
     - Fixed ezekiel ore leeching to actually give the correct amount of ore. This hurts you more then it hurts me, i assure you.
     - Fixed the catefory tabs not using up the amount of space they have.
     - Fixed molten metal capatalisation.
+    - Revamped all ammo recipes, to be cheaper and just better.
 
 ---------------------------------------------------------------------------------------------------
 Version: 0.6.150
